--- a/FRONTEND/snapnote/package.json
+++ b/FRONTEND/snapnote/package.json
@@ -12,6 +12,7 @@
     "react-google-login": "^5.2.2",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
+    "typeface-lobster": "^1.1.13",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
